Created ten Rules of Styles + Added Images

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,73 @@
-*,
+/* *,
 *::before,
 *::after {
     margin: 0;
     padding: 0;
     box-sizing: inherit;
-}
+} */
 
 html {
     box-sizing: border-box;
-    font-size: 62.5%;
+    font-size: 62.5%; */
 }
 
+body{
+    font-family: "Lucidia Sans", "Lucidia Sans Regular", "Lucidia Grande",
+    "Lucida Sans Unicode", Verdana, Arial, Helvetica, Verdana, Geneva, Tahoma, sans-serif;
+    background-color: purple;
+    color: white;
+    margin: 0;
+}
+
+header {
+    background-color: rgb(226, 11, 250);
+    position: relative;
+    padding: 1rem;
+}
+
+nav a {
+    color: rgb(235, 196, 21);
+    font-size: 30px;
+    text-decoration: none;
+
+}
+
+nav ul {
+    list-style-type: none;
+    position: absolute;
+    top: 0.7rem;
+    right: 1rem;
+}
+
+nav li {
+    display: inline;
+    margin-right: 0.5rem;
+}
+
+main {
+    margin: 1rem auto;
+    width: 80%;
+
+}
+
+main section {
+    margin-top: 6rem;
+    padding: 2rem;
+}
+
+.home img {
+    float: left;
+    margin-right: 3rem;
+    width: 400px;
+}
+
+footer {
+    text-align: center;
+    text-align: center;
+    background-color: rgb(4, 39, 8);
+    padding: 4rem;
+    position: fixed;
+    width: 100%;
+    left: 0;
+    bottom: 0;
+}
