--- a/styles.css
+++ b/styles.css
@@ -1,118 +1,838 @@
-/* *,
+:root {
+    --color-black: #000000;
+    --color-white: #ffffff;
+    --color-gray: #707070;
+    --color-primary: #bf7631;
+}
+
+*,
 *::before,
 *::after {
     margin: 0;
     padding: 0;
-    box-sizing: inherit;
-} */
+}
+
+ul {
+    list-style: none;
+}
 
 html {
-    box-sizing: border-box;
-   font-size: 60.5%; 
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
-body{
-    font-family: "Lucidia Sans", "Lucidia Sans Regular", "Lucidia Grande",
-    "Lucida Sans Unicode", Verdana, Arial, Helvetica, Verdana, Geneva, Tahoma, sans-serif;
-    background-color: white;
-    color: black;
-    margin: 400;
-}
-
-header {
-    background-color:rgb(255, 255, 255);
-    position: relative;
-    padding: 5rem;
-}
-
-nav a {
-    color: gold;
-    font-size: 30px;
-    text-decoration: none;
-
-}
-
-nav ul {
-    list-style-type: none;
-    position: absolute;
-    top: 0.7rem;
-    right: 1rem;
-}
-
-nav li {
-    display: inline;
-    margin-top: 0.5rem;
-}
-
-main {
-    margin: 1rem auto;
-    width: 80%;
-
-}
-
-main section {
-    margin-top: 6rem;
-    padding: 2rem;
-}
-
-main section img {
-    margin-inline-end: 3rem;
-    padding: 2rem;
-
-}
-
-img {
-    float: row;
-    margin-block-start: 6rem;
-    width: 300px;
-    left: 0;
-    right: 0;
-}
-
-.home img {
-    float: left;
-    margin-right: 3rem;
-    width: 400px;
-}
-
-.class img {
-    float: row;
-    margin-inline-start: 3rem;
-    width: fit-content;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-footer {
-    text-align: center;
-    background-color: gold;
-    padding: 4rem;
-    position: fixed;
+body {
     width: 100%;
+    height: 100dvh;
+    overflow-x: hidden;
+}
+
+.container {
+    max-width: 1420px;
+    width: calc(100% - 100px);
+    margin-left: 40px;
+    margin-right: 40px;
+}
+
+/* navbar */
+
+.navbar--container {
+    display: flex;
+    align-items: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-bottom: 5px solid var(--color-black);
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.navbar__navigate--links {
+    display: flex;
+    align-items: center;
+    gap: 2.5rem;
+}
+
+.navbar__navigate--links>li {
+    text-transform: uppercase;
+    font-size: 1.75rem;
+    cursor: pointer;
+}
+
+.navbar__navigate--links>li>a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.navbar__logo--container {
+    display: flex;
+    align-items: center;
+    gap: 0.75rem;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.navbar__logo--container>span {
+    font-size: 2.5rem;
+    font-weight: 300;
+    display: inline-block;
+    letter-spacing: 4px;
+}
+
+.navbar__logo--img {
+    width: 40px;
+    height: 40px;
+    object-fit: contain;
+}
+
+.navbar__search--container {
+    width: 100%;
+    max-width: 200px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    border: 1px solid var(--color-black);
+    margin-left: auto;
+}
+
+.navbar__search--container>input {
+    all: unset;
+    position: absolute;
+    inset: 0;
+    padding: 0 25px 0 10px;
+    font-size: 1.5rem;
+    line-height: 20px;
+}
+
+.navbar__search--container>img {
+    width: 20px;
+    height: 20px;
+    object-fit: contain;
+    position: absolute;
+    right: 3px;
+}
+
+.navbar__cart-btn--container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 20px;
+}
+
+.navbar__cart-btn {
+    all: unset;
+    display: inline-block;
+    font-size: 1.5rem;
+}
+
+.cart-icon--container {
+    width: 35px;
+    height: 35px;
+    position: relative;
+    display: none;
+}
+
+.cart-icon--container::after {
+    content: "0";
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    border: 1px solid #000;
+    background-color: #fff;
+    border-radius: 50%;
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+    width: 15px;
+    height: 15px;
+    padding: 5px;
+    text-align: center;
+    color: #000;
+}
+
+.cart-icon--container>img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+/* header */
+
+.header--container {
+    width: 100%;
+    height: 34vw;
+    background: url(./assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg) no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+    position: relative;
+}
+
+.header--container::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 30%;
+    background: linear-gradient(to right,
+            rgba(0, 0, 0, 1),
+            rgba(0, 0, 0, 0.75) 60%,
+            rgba(0, 0, 0, 0));
+    z-index: 10;
+}
+
+.header--container::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 30%;
+    background: linear-gradient(to left,
+            rgba(0, 0, 0, 1),
+            rgba(0, 0, 0, 0.75) 60%,
+            rgba(0, 0, 0, 0));
+    z-index: 10;
+}
+
+.header__titles--container {
+    position: relative;
+    height: calc(100% - 100px);
+    padding-top: 50px;
+    padding-bottom: 50px;
+    z-index: 20;
+    display: flex;
+    justify-content: space-between;
+}
+
+.header__title--one {
+    font-size: 3.5rem;
+    color: var(--color-white);
+    max-width: 214px;
+    line-height: 4.3rem;
+    font-weight: 200;
+    letter-spacing: 2px;
+    position: absolute;
+    left: 0;
+    top: 50px;
+}
+
+.header__title--two {
+    font-size: 3.5rem;
+    color: var(--color-white);
+    max-width: 214px;
+    line-height: 4.3rem;
+    font-weight: 200;
+    letter-spacing: 2px;
+    position: absolute;
+    right: 0;
+    bottom: 50px;
+}
+
+/* about */
+.about--container {
+    margin-top: 60px;
+}
+
+.about__title {
+    font-size: 4rem;
+    text-transform: uppercase;
+    font-weight: 200;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    position: relative;
+}
+
+.about__title::after {
+    content: "";
+    position: absolute;
     left: 0;
     bottom: 0;
+    height: 5px;
+    width: 60%;
+    background-color: var(--color-black);
+}
+
+.about__content--container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 50px;
+    /* height: 600px; */
+}
+
+.about__content {
+    display: flex;
+    width: 60%;
+    flex-direction: column;
+}
+
+.about__content--paragraph {
+    color: var(--color-black);
+    font-size: 1.7rem;
+    line-height: 2rem;
+    padding: 0 50px 50px;
+}
+
+.about__content--bottom-section {
+    display: flex;
+    justify-content: space-between;
+}
+
+.about__content--bottom-section__image--container {
+    width: 40%;
+}
+
+.about__content--bottom-section__image--container>img {
+    width: 100%;
+}
+
+.about__content--bottom-section__paragraphs--container {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 16px;
+}
+
+.about__content--bottom-section__paragraph-one {
+    color: var(--color-black);
+    font-size: 1.7rem;
+    line-height: 2rem;
+    padding-top: 30px;
+}
+
+.about__content--bottom-section__paragraph-two {
+    color: var(--color-black);
+    font-size: 1.7rem;
+    line-height: 2rem;
+    padding-bottom: 30px;
+}
+
+.about__image {
+    width: 30%;
+    height: 100%;
+    display: flex;
+    /* padding-right: 16px; */
+    align-items: center;
+}
+
+.about__image>img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+/* products */
+
+.products--container {
+    margin-top: 60px;
+}
+
+.products__title {
+    font-size: 4rem;
+    text-transform: uppercase;
+    font-weight: 200;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    position: relative;
+}
+
+.products__title::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 5px;
+    width: 60%;
+    background-color: var(--color-black);
+}
+
+.products__items {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+    justify-items: center;
+    margin-top: 60px;
+}
+
+.product__card--container {
+    all: unset;
+    cursor: pointer;
+    display: block;
+    width: 300px;
+}
+
+.product__image--container {
+    width: 300px;
+    height: 300px;
+}
+
+.product__image--container>img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.product__title_and_price {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.product__title {
+    font-size: 2rem;
+    font-weight: 200;
+    letter-spacing: 1px;
+    position: relative;
+    padding-bottom: 20px;
+}
+
+.product__title::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 4px;
+    width: 110%;
+    background-color: var(--color-black);
+}
+
+.product__price {
+    font-size: 2rem;
+    font-weight: lighter;
+    letter-spacing: 1px;
+    align-self: flex-start;
+}
+
+.product__summary {
+    font-size: 1.5rem;
+    padding: 10px 0;
+}
+
+.product__btns--container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 1.5rem;
+    margin-top: 8px;
+}
+
+.product__detail--link {
+    all: unset;
+    cursor: pointer;
+    color: var(--color-primary);
+    text-transform: uppercase;
+    font-weight: 500;
+    text-decoration: none;
+    border-bottom: 1px solid var(--color-primary);
+    padding-bottom: 1px;
+}
+
+.product__add-btn {
+    all: unset;
+    background-color: var(--color-primary);
+    color: var(--color-white);
+    font-weight: bold;
+    text-transform: uppercase;
+    cursor: pointer;
+    padding: 6px 12px;
+}
+
+/* contact us */
+
+.contact-us__section--container {
+    margin-top: 60px;
+}
+
+.contact-us__section__title {
+    font-size: 4rem;
+    text-transform: uppercase;
+    font-weight: 200;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    position: relative;
+}
+
+.contact-us__section__title::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 5px;
+    width: 60%;
+    background-color: var(--color-black);
+}
+
+.contact-us__form--container {
+    max-width: 700px;
+    margin: 40px auto;
+}
+
+.contact-us__email-field {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+
+.contact-us__email-field>label {
+    font-size: 1.7rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+.contact-us__email-field>input {
+    all: unset;
+    width: calc(100% - 8px);
+    border: 1px solid var(--color-gray);
+    font-size: 2rem;
+    padding: 0 4px;
+    height: 40px;
+    line-height: 40px;
+}
+
+.contact-us__message-field {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    margin-top: 20px;
+}
+
+.contact-us__message-field>label {
+    font-size: 1.7rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+.contact-us__message-field>textarea {
+    all: unset;
+    width: calc(100% - 8px);
+    border: 1px solid var(--color-gray);
+    font-size: 2rem;
+    padding: 0 4px;
+    height: 40px;
+    line-height: 40px;
+    min-height: 150px;
+}
+
+.contact-us__submit-btn--container {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.contact-us__submit-btn {
+    all: unset;
+    cursor: pointer;
+    background-color: var(--color-primary);
+    color: var(--color-white);
+    font-weight: bold;
+    text-transform: uppercase;
+    cursor: pointer;
+    padding: 6px 24px;
+    font-size: 1.5rem;
+    margin-top: 20px;
+}
+
+/* footer */
+.footer--container {
+    background-color: var(--color-primary);
+    width: calc(100% - 32px);
+    padding: 16px;
+    padding-bottom: 32px;
+    position: relative;
+}
+
+.footer {
+    max-width: 700px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.footer__social--section {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.footer__social--links {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.footer__social--link {
+    text-decoration: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer__social--link>img {
+    width: 45px;
+    height: 45px;
+    object-fit: contain;
+}
+
+.footer__text--section {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 12px;
+}
+
+.footer__text--section>p {
+    font-size: 1.3rem;
+}
+
+.footer__copy-right-text {
+    position: absolute;
+    bottom: 5px;
+    right: 20px;
+    font-size: 1.5rem;
+}
+
+.footer__logo--container {
+    display: flex;
+    align-items: center;
+    gap: 0.75rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.footer__logo--container>span {
+    font-size: 3rem;
+    font-weight: 300;
+    display: inline-block;
+    letter-spacing: 4px;
+}
+
+.footer__logo--img {
+    width: 65px;
+    height: 65px;
+    object-fit: contain;
+}
+
+/* hamburger menu icon */
+.hamburger-menu--container {
+    display: none;
+    width: 35px;
+    gap: 5px;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.line {
+    width: 35px;
+    height: 5px;
+    border-radius: 10px;
+    background-color: #000000;
+}
+
+/* Responsive */
+
+@media screen and (max-width: 1024px) {
+    .about__content--bottom-section__paragraph-two {
+        padding-bottom: 16px;
+    }
+
+    .about__content--paragraph {
+        padding: 16px 0 16px 0;
+    }
+
+    .hamburger-menu--container {
+        display: flex;
+    }
+
+    .navbar__navigate--links {
+        display: none;
+    }
+
+    .cart-icon--container {
+        display: flex;
+    }
+
+    .navbar__cart-btn {
+        display: none;
+    }
+
+    .navbar__search--container {
+        max-width: unset;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .navbar__search--container>img {
+        right: 5px;
+        width: 30px;
+        height: 30px;
+    }
+
+    .about__content--container {
+        flex-direction: column-reverse;
+    }
+
+    .about__content {
+        width: 100%;
+    }
+
+    .about__image {
+        width: 100%;
+        padding-top: 16px;
+        padding-bottom: 16px;
+    }
+
+    .navbar--container {
+        border-bottom: none;
+        margin-bottom: 0;
+    }
+
+    .header--container {
+        height: 340px;
+    }
+
+    .about__content--bottom-section__paragraphs--container {
+        padding: 0 0;
+    }
+}
+
+@media screen and (max-width: 720px) {
+    .header__title--one {
+        font-size: 3rem;
+    }
+
+    .header__title--two {
+        font-size: 3rem;
+    }
+
+    .about__content--bottom-section__image--container {
+        width: 100%;
+    }
+
+    .about__content--bottom-section__paragraphs--container {
+        width: 100%;
+    }
+
+    .about__content--bottom-section {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .cart-icon--container {
+        width: 30px;
+        height: 30px;
+    }
+
+    .cart-icon--container::after {
+        font-size: 1.2rem;
+        padding: 3px;
+    }
+
+    .navbar__logo--container {
+        gap: 5px;
+    }
+
+    .navbar__logo--container>span {
+        font-size: 1.5rem;
+    }
+
+    .navbar__search--container {
+        width: 30px;
+        height: 30px;
+    }
+
+    .navbar__search--container>img {
+        width: 25px;
+        height: 25px;
+        right: 2px;
+    }
+
+    .navbar__logo--img {
+        width: 30px;
+        height: 30px;
+    }
+
+    .footer__social--section {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .footer__logo--container {
+        width: 100%;
+        justify-content: center;
+    }
+
+    .footer__social--links {
+        width: 50%;
+        order: 2;
+        justify-content: center;
+    }
+
+    .footer__text--section {
+        flex-direction: column;
+        align-items: center;
+        gap: 16px;
+    }
+
+    .footer__copy-right-text {
+        right: 50%;
+        transform: translateX(50%);
+    }
+
+    .contact-us__section__title::after {
+        width: 100%;
+    }
+
+    .contact-us__section__title {
+        text-align: center;
+    }
+
+    .about__title::after {
+        width: 100%;
+    }
+
+    .about__title {
+        text-align: center;
+    }
+
+    .products__title::after {
+        width: 100%;
+    }
+
+    .products__title {
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 364px) {
+    .navbar__logo--container {
+        display: none;
+    }
+
+    .header__title--one {
+        font-size: 2.5rem;
+    }
+
+    .header__title--two {
+        font-size: 2.5rem;
+    }
+
+    .products__items {
+        grid-template-columns: 1fr;
+    }
+
+    .product__card--container {
+        width: 100%;
+    }
+
+    .product__image--container {
+        width: 100%;
+        height: auto;
+        aspect-ratio: 1 / 1;
+    }
 }
