--- a/styles.css
+++ b/styles.css
@@ -29,10 +29,10 @@ body {
 }
 
 .container {
-    max-width: 1420px;
-    width: calc(100% - 100px);
-    margin-left: 40px;
-    margin-right: 40px;
+    max-width: 1280px;
+    width: calc(100% - 200px);
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* navbar */
